# PPC-IFNMG

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts
api/rust/: Cargo.toml  argumentos.json  script.bat
api/rust/src/: main.rs
api/rust/src/controllers/: mod.rs
api/rust/src/routes/: mod.rs
api/typst/: main.typ
app/: layout.tsx  page.tsx
app/editor/: page.tsx
app/login/: page.tsx
app/signup/: page.tsx
components/: campus-info-form.tsx  course-info-form.tsx  mode-toggle.tsx  syllabus-info-form.tsx
interfaces/documentos/: index.ts
services/: index.ts
services/documentos/: index.ts
